# easy_sample_mark

./: CMakeLists.txt  README.md  controlwindow.cpp  controlwindow.h  document.qrc  easy_sample_mark.pro  en.qm  en.ts  imagecontrolwindow.cpp  images.qrc  imagesegmentcontrolwindow.cpp  imagetrackingcontrolwindow.cpp  imagetrackingcontrolwindow.h  ja.ts  main.cpp  mainwindow.cpp  mainwindow.h  ocrcontrolwindow.cpp  ocrcontrolwindow.h  pclcontrolwindow.cpp  qm.qrc  videocontrolwindow.cpp  videocontrolwindow.h  videomultipletracking.cpp  zh.qm  zh.ts
autoSampleMark/: autodetection2dwindow.cpp  autodetection2dwindow.h  autoparamterconfigwindow.cpp  autosamplemarkthread.cpp  autosamplemarkthread.h  autosamplemarkwindow.cpp  modellabelwindow.cpp
baseAlgorithm/: baseAlgorithm.pri  common_transform.h  coordinate_transform.cpp  coordinate_transform.h  geometryalgorithm.cpp
calibration/: birdviewprocess.cpp  birdviewprocess.h  calibration.pri  cameraintrinscalibration.cpp  cameraintrinscalibration.h  imagelabel.h
calibrationTools/: birdviewprocess.cpp  birdviewprocess.h  cameraintrinsicsthread.cpp  cameraintrinsicsthread.h  cameraintrinsicswindow.cpp  cameraintrinsicswindow.h  cameraverificationwindow.cpp  cameraverificationwindow.h  imagelabel.cpp  imagelabel.h  lidarcameracalibratwindow.cpp  lidarcameracalibratwindow.h  pointcloudviewer.cpp  pointcloudviewer.h  radarcameramanualwindow.cpp  radarcameramanualwindow.h
cmake/: dependencies.cmake
dataType/: mark_data_type.h  myobject.cpp  myobject.h  myrect3d.h  ocrobject.cpp  ocrobject.h
deepLearning/: basedetector.cpp  basedetector.h  cnn_data_type.h  deepLearning.pri  ssdector.cpp  ssdector.h  yolov5dector.cpp  yolov5dector.h
docs/: docker环境下编译与运行.md  数据标注格式.md  数据标注需求.doc  数据集标准存储格式说明.doc  数据集采集场景定义.doc
drawShape/: drawinstanceshape.cpp  drawinstanceshape.h  drawlaneshape.cpp  drawlineshape.cpp  drawpointsshape.cpp  drawpointsshape.h  drawpolygonshape.cpp  drawpolygonshape.h  drawrectshape.cpp  drawrectshape.h  drawrecttrackshape.cpp  drawrecttrackshape.h  drawshape.cpp  drawshape.h  myshape.cpp  myshape.h
drawWidget/: editablelabel.cpp  editablelabel.h  imagedrawlabel.cpp  imagedrawlabel.h  imagedrawwidget.cpp  ocrlabel.cpp  ocrlabel.h  pclviewer.cpp  pclviewer.h  segmentlabel.cpp  segmentlabel.h  tracking2dlabel.cpp  tracking2dlabel.h
helpers/: dirprocess.cpp  dirprocess.h  recordhistorydata.cpp
multipletracking/: kalmanmultipletracker.cpp  kalmanmultipletracker.h  multipletracking.pri  opencvmultipletracker.cpp  opencvmultipletracker.h
paramWindow/: autoparamterconfigwindow.cpp  autoparamterconfigwindow.h  manualparamterconfigwindow.cpp  manualparamterconfigwindow.h  markclasswindow.cpp  pointcloudmarkparamterwindow.cpp  pointcloudmarkparamterwindow.h  segmentparamterconfigwindow.cpp  segmentparamterconfigwindow.h  videomarkparamterwindow.cpp  videoparameterwindow.cpp
(+86 files in other folders)
